cluster-setup/dashboard/custom/dashboard_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: dashboard.javirp.com
    http:
      paths: 
      - path:
        backend:
          serviceName: kubernetes-dashboard
          servicePort: https
